# cliccy

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: deploy-pages.yml  release.yml
site/: index.html  styles.css
src/: app.rs  clipboard_backend.rs  config.rs  hotkey.rs  icon_cache.rs  keys.rs  main.rs  monitor.rs  store.rs  tray.rs  ui.rs  ui_preview.rs  ui_row.rs  x11_clipboard_watch.rs  x11_window_hints.rs
