[package]
name = "cliccy"
version = "0.4.2"
edition = "2021"
description = "A clipboard history manager for Linux — Maccy-style, built with GTK4."
license = "MIT"
authors = ["tranhuuhuy297 <tranhuuhuy297@gmail.com>"]
repository = "https://github.com/tranhuuhuy297/cliccy"
homepage = "https://github.com/tranhuuhuy297/cliccy"
readme = "README.md"
keywords = ["clipboard", "gtk4", "wayland", "maccy", "linux"]
categories = ["command-line-utilities", "gui"]
exclude = ["target", "*.gif", "*.png", "*.mp4"]

[[bin]]
name = "cliccy"
path = "src/main.rs"

[dependencies]
# GTK4 bindings. v4_6 keeps the source compatible down to Ubuntu 22.04 (GTK 4.6),
# while still building/running fine against newer runtimes (24.04 ships 4.14).
gtk = { package = "gtk4", version = "0.9", features = ["v4_6"] }
# Bundled SQLite => no libsqlite3-dev apt dependency required.
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
# X11 XFIXES for event-driven clipboard-change detection (works under XWayland),
# avoiding the focus jitter and process churn of timer-based polling.
x11rb = { version = "0.13", features = ["xfixes", "randr"] }
# Access the popup's XWayland window XID so we can mark it skip-taskbar and keep
# it out of the GNOME dock.
gdk4-x11 = "0.9"
# StatusNotifierItem tray icon for the GNOME top bar. Pure Rust over zbus — no
# libdbus/libappindicator C dependency, matching the bundled-everything approach.
# Ubuntu 22.04+ ships the AppIndicator extension by default.
ksni = "0.3"
# Forwards tray callbacks (on ksni's D-Bus thread) to the glib main thread.
async-channel = "2"
# A minimal current-thread runtime to host ksni's async D-Bus service off the
# glib main loop. `rt` only — no macros, net, or fs features needed.
tokio = { version = "1", default-features = false, features = ["rt"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
